<resources>
    <!-- General -->
    <string name="app_name">Pharmax</string>
    <string name="premium">Premium</string>
    <string name="tutorial">Tutorial</string>
    <string name="tiktok">Tiktok</string>
    <string name="insta">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="help">Help</string>
    <string name="contact_support">Contact support</string>
    <string name="general_termes">Generals terms</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="returns_policy">Returns policy</string>
    <string name="subscription">Subscription</string>
    <string name="how_it_work">How it work</string>
    <string name="social_media">Social media</string>
    <string name="help_center">Help center</string>
    <string name="legal">Legals</string>


    <!-- Presentation -->

    <string name="mainScanTitle">Scan</string>
    <string name="mainRememberInformedTitle">Get informed, Remember</string>
    <string name="mainScanDesc">Scan the barcode on the medicine box and find out what this medicine is used for</string>
    <string name="mainRememberDesc">You can add a medication to the diary or favorite it for easier access</string>
    <string name="mainInformedDesc">You can access all the drug information in writing, sound, video</string>

    <!-- Login and SingIn-->
    <string name="email">Email</string>
    <string name="password">Password</string>


    <!-- Login -->
    <string name="LoginTitle">Happy to see you again</string>
    <string name="LoginSubmit">Login</string>
    <string name="content_description_start_icon">search</string>
    <string name="login_connect_google">Login with Google</string>
    <string name="login_connect_facebook">Login with Facebook</string>
    <string name="login_connect_email">Login with email</string>

    <string name="loginTitle2">Login</string>
    <string name="loginForgotPassword">I don\'t remember the password?</string>

    <!-- Sing in -->
    <string name="SingInTitle">Become A Member</string>
    <string name="SingInSubmit">Sing in</string>
    <string name="singIn_connect_google">Sing In with Google</string>
    <string name="singIn_connect_facebook">Sing In with Facebook</string>
    <string name="singIn_connect_email">Sing In with email</string>
    <string name="passwordC">Confirmation</string>
    <string name="name">Name</string>
    <string name="tel">Phone</string>
    <string name="age">Age</string>
    <string name="SingInTitle2">Sing In</string>
    <string name="SingInTitle3">Sing In</string>
    <string name="ageDescription">YO</string>


    <!-- Home -->
    <string name="back">Back</string>
    <string name="HomeQrScanner">QR SCANNER</string>
    <string name="HomeTitle">Scan</string>
    <string name="welcome">Welcome</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="scan">Scan</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="EditProfilSubmit">Edit profil</string>
    <string name="EditProfileSubmit">Edit profile</string>
    <string name="settings">Settings</string>


</resources>