<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/subscription">
        <menu>
            <item
                android:id="@+id/nav_premium"
                android:icon="@drawable/ic_premium_24px"
                android:title="@string/premium" />
        </menu>

    </item>
    <item
        android:title="@string/how_it_work">
        <menu>
            <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_tutorial_24px"
                android:title="@string/tutorial" />
        </menu>
    </item>

    <item
        android:title="@string/social_media">
        <menu>
            <item
                android:id="@+id/nav_tiktok"
                android:icon="@drawable/ic_tiktok_24px"
                android:title="@string/tiktok" />
            <item
                android:id="@+id/nav_insta"
                android:icon="@drawable/ic_insta_24px"
                android:title="@string/insta" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube_24px"
                android:title="@string/youtube" />
        </menu>

    </item>

    <item
        android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_24px"
                android:title="@string/help_center" />
            <item
                android:id="@+id/nav_contact_support"
                android:icon="@drawable/ic_contact_support_24px"
                android:title="@string/contact_support" />
        </menu>
    </item>

    <item
        android:title="@string/legal">
        <menu>
            <item
                android:id="@+id/nav_general_termes"
                android:icon="@drawable/ic_general_termes_24px"
                android:title="@string/general_termes" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_privacy_policy_24px"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_returns_policy"
                android:icon="@drawable/ic_returns_policy_24px"
                android:title="@string/returns_policy" />
        </menu>
    </item>


</menu>