<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".LoginActivity">
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="100dp"/>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/LoginTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/img_login"/>


    <Button
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:id="@+id/elevatedButtonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_connect_google"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="15dp"
        app:icon="@drawable/ic_google_24dp"
        />
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:id="@+id/elevatedButtonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_connect_facebook"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="15dp"
        app:icon="@drawable/ic_facebook_24dp"
        />
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:id="@+id/elevatedButtonMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_connect_email"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:icon="@drawable/ic_mail_24dp"
        />


</LinearLayout>





