<?xml version="1.0" encoding="utf-8"?>
<!-- import package AS android -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:text="@string/mainScanTitle"
        android:textAlignment="center"
        android:textAppearance="@style/Title.Myapplication.Page" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/gray"
        android:layout_marginBottom="20dp"
        android:text="@string/mainRememberInformedTitle"
        android:textAlignment="center"
        android:textAppearance="@style/Title.Myapplication.Page" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/slider">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginSubmit" />

    <Button
        android:id="@+id/singIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SingInSubmit" />
    <include layout="@layout/slides_layout"/>

</LinearLayout>