<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="top"

    tools:context=".LoginActivity">
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="100dp"/>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/loginTitle2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>




    <!-- Mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="Email"
        app:startIconDrawable="@drawable/ic_mail_24dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="Password"
        app:startIconDrawable="@drawable/ic_pwd_24dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginSubmit"/>
    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/loginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginForgotPassword"


    />

</LinearLayout>





