<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"

    tools:context=".SingInActivity3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:gravity="top">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginBottom="24dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:minWidth="50dp"
                android:height="8dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner_view"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:minWidth="50dp"
                android:height="8dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner_view"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:height="8dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner_view"/>
        </LinearLayout>
        <TextView
            android:id="@+id/welcome"
            android:textAppearance="@style/Title.Myapplication.Page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/SingInTitle3"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop="80dp">

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/singInNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="Name"
            app:startIconDrawable="@drawable/ic_name_24dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/singInName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/singInPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="Phone"
            app:startIconDrawable="@drawable/ic_tel_24dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/singInPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/ageDescription"
            android:value="20.0"
            android:valueFrom="0"
            android:valueTo="100"
            android:stepSize="1"/>

        <Button
            android:id="@+id/singInSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SingInSubmit"/>


    </LinearLayout>

</LinearLayout>